# VeMUlator

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
Source/: VeMUlator.sln
Source/VeMUDisassembler/: Disassembler.cpp  Disassembler.h  VeMUDisassembler.vcxproj  main.cpp
Source/VeMUlator/: 86KCore.cpp  86KCore.h  MemoryMap.h  VeMUlator.vcxproj  main.cpp
src/: cpu.rs  disassembler.rs  main.rs  opcodes.rs
